--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node Server/index.js"
   },
   "author": "",
   "license": "ISC",
